Fixed bug with misalignment

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -3,7 +3,7 @@
   --color-primary: #211c40;
   --color-secondary: #332b80;
   --color-blocks: #332b80;
-  --conway-alpha: 0.10;
+  --conway-alpha: 0.05;
   --color-background: #ececec;
   --color-text: #211c40;
   --color-accent: #ffffff;
